# monad-batch

./: BatchExample.hs  LICENSE  monad-batch.cabal
Control/Monad/: Batch.hs
test/: BatchTests.hs  Common.hs  LawsTests.hs  Tests.hs
