name:                monad-batch
version:             0.0.0.1
synopsis:            A monad for batching requests together
description:
    A monad transformer which adds a 'request' operation. Independent requests
    can be batched together using Applicative instance.
license:             BSD3
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
category:            Control
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/zyla/monad-batch

library
  exposed-modules:     Control.Monad.Batch

  other-extensions:    TypeFamilies
                     , GADTs
                     , DeriveFunctor
                     , RankNTypes

  build-depends:       base >=4.7 && <4.10
                     , mtl >=2.1 && <2.3

  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test

  other-modules:       BatchTests
                     , LawsTests
                     , Common

  default-extensions:  TemplateHaskell
                     , TypeFamilies
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , ViewPatterns

  build-depends:       base >=4.7 && <4.10
                     , mtl >=2.1 && <2.3
                     , QuickCheck >=2.7 && <2.9
                     , monad-batch

  default-language:    Haskell2010
